서비스 this생략, 컨트롤러 return 수정